--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Run Buddy</title>
+  <link rel="stylesheet" href="./assets/css/style.css"/>
 </head>
 
 <body> 
@@ -35,6 +36,20 @@
 
   <!-- hero/jumbotron -->
   <section>
+    <div>
+      <h3>Get Started Today</h3>
+      <p>Fill out this form and on of our trainers will schedule a consult</p>
+      <!-- Add for element -->
+      <form>
+        <label for="name">Enter full name:</label>
+        <input type="text" placeholder="Your Name" name="name" id="name" />
+        <label for="email">Enter E-mail:</label>
+        <input type="text" placeholder="Email Address" name="email" id="email" />
+        <label for="phonenumber">Enter Phone Number:</label>
+        <input type="text" placeholder="Phone Number" name="phonenumber" id="phonenumber" />
+        
+      </form>
+    </div>
   </section>
 
   <!-- "what we do" section -->
@@ -60,7 +75,11 @@
   <!-- footer -->
   <footer>
     <h2>❤️ Made with love by Run Buddy.</h2>
+    <div>
+         <a href="#">Read Our Privacy Policy</a><br />
+         &copy; 2019 Run Buddy, Inc.
+    </div>
   </footer>
 </body>
 
-</html>
+</html> 
