--- a/index.html
+++ b/index.html
@@ -77,15 +77,15 @@
 <!-- End Hero -->
 
   <!-- "what we do" section -->
-  <section>
+  <section id="what-we-do" class="intro">
     <h2>What We Do</h2>
     <p>
-      blah blah blah blah blah blah blah blah blah
+      butcher sekfues chanvray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't hear of them single-origin coffee Vice ganny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggins narwhal Marfa Schlitz sutainable intelligentsia umami deep v craft
     </p>
   </section>
 
   <!-- "what you do" section -->
-  <section id="what-we-do">
+  <section id="what-you-do">
     <h2>What You Do</h2>
 
     <!-- insert this image element -->
@@ -118,18 +118,18 @@
       <img src="./assets/images/step-4.svg" alt="" />
 
       <h3>Step 4: See Results.</h3>
-      
+
       <p>Bi-weekly checkins with your trainer will keep you focused</p>
     </div>
   </section>
 
   <!-- "meet the trainers" section -->
-  <section id="what-you-do">
+  <section id="meet-the-trainer">
     <h2>Meet The Trainers</h2>
   </section>
 
   <!-- "reach out" section -->
-  <section>
+  <section id="reach-out">
     <h2>Reach Out</h2>
   </section>
 
